--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -1,74 +1,112 @@
-.navbar-list li{
+.navbar-list li {
     float: left;
     list-style-type: none;
     position: relative;
 }
-.show .iq-sub-dropdown{
+
+.show .iq-sub-dropdown {
     display: inline-block !important;
 }
-.iq-color{
+
+.iq-color {
     color: white !important;
 }
+
 /* .badge{
     line-height: 1.5 !important;
     font-size: 14px;
     width: 10%
 } */
-.iq-text{color:#d1d0cf!important}
-.css-319lph-ValueContainer .css-1s2u09g-control .css-tlfecz-indicatorContainer{
+.iq-text {
+    color: #d1d0cf !important
+}
+
+.css-319lph-ValueContainer .css-1s2u09g-control .css-tlfecz-indicatorContainer {
     background: #141414 !important;
     border: none !important
 }
-.css-1okebmr-indicatorSeparator{
+
+.css-1okebmr-indicatorSeparator {
     background: #141414 !important;
     border: none !important
 }
-.css-qc6sy-singleValue{
+
+.css-qc6sy-singleValue {
     color: #D1D0CF !important;
     border: none !important
 }
-.css-1s2u09g-control .css-b62m3t-container{
+
+.css-1s2u09g-control .css-b62m3t-container {
     background-color: #141414 !important;
-    border: none!important
+    border: none !important
 }
-.css-1pahdxg-control{
+
+.css-1pahdxg-control {
     background-color: #141414 !important;
-    border: none!important;
+    border: none !important;
     box-shadow: none !important
 }
+
 .css-1f43avz-a11yText-A11yText {
     background-color: #141414 !important;
-    border: none!important
+    border: none !important
 }
-.css-b62m3t-container{
+
+.css-b62m3t-container {
     background-color: #141414 !important;
-    border: none!important;
+    border: none !important;
     box-shadow: none !important
 }
-.css-1s2u09g-control{
+
+.css-1s2u09g-control {
     background-color: #141414 !important;
-    border: none!important;
+    border: none !important;
 }
-.css-2613qy-menu{
+
+.css-2613qy-menu {
     background-color: #141414 !important;
 }
 
-.css-tlfecz-indicatorContainer{
+.css-tlfecz-indicatorContainer {
     background: #141414 !important
 }
 
-.css-yk16xz-control{
+.css-yk16xz-control {
     background: #141414 !important;
-  
-} 
-.css-1gtu0rj-indicatorContainer{
+
+}
+
+.css-1gtu0rj-indicatorContainer {
     background: #141414 !important;
 }
-.iq-select.css-b62m3t-container #react-select-2-listbox{
-    background-color: var(--iq-body-bg) ;
+
+.iq-select.css-b62m3t-container #react-select-2-listbox {
+    background-color: var(--iq-body-bg);
     color: var(--iq-white);
 }
-.iq-select.css-b62m3t-container #react-select-2-listbox{
+
+.iq-select.css-b62m3t-container #react-select-2-listbox {
     /* background-color: var(--iq-primary); */
 }
 
+.timetextcolor {
+    color: #1E2C37 !important;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.text-color {
+    color: #B3BAD1 !important;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    white-space: nowrap; 
+    width: 100px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+
+}
