--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -131,7 +131,8 @@ loading
 .page-link { color: var(--iq-primary); border-color: var(--iq-primary); }
 .page-link:hover { color: var(--iq-primary-hover); border-color: var(--iq-primary-hover); }
 .page-item.disabled .page-link { border-color: var(--iq-primary); }
-.form-control { background-color: var(--iq-body-bg); border: 1px solid transparent; height: 46px; position: relative; color:var(--iq-body-text); font-size: 16px;width: 100%; -webkit-border-radius: 6px; border-radius: 6px;}
+
+.form-control { background-color: #0D1D29 ; border: 1px solid transparent; height: 34px; position: relative; color:var(--iq-body-text); font-size: 14px;width: 100%; -webkit-border-radius: 6px; border-radius: 6px;}
 .form-control:focus { color: var(--iq-dark1); border-color: transparent; box-shadow: none;background-color: var(--iq-body-bg);}
 .progress-bar { background-color: var(--iq-primary); }
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle { background-color: var(--iq-primary-hover); border-color: var(--iq-primary-hover); }
