--- a/src/assets/css/swiper.css
+++ b/src/assets/css/swiper.css
@@ -1,13 +1,16 @@
-#swiper .swiper-button { position: static; background: var(--iq-primary) 0% 0% no-repeat padding-box; margin: 0 0 0 20px; line-height: 5px; box-shadow: 0px 9px 19px #01041B0D; font-size: 0; transform: none; color: var(--iq-white); -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
-#swiper .swiper-button:hover { background: var(--iq-white); color: var(--iq-primary) !important; -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
+#swiper .swiper-button { position: static; background: var(--iq-primary) 0% 0% no-repeat padding-box; margin: 0 0 0 20px; line-height: 3px; box-shadow: 0px 9px 19px #01041B0D; font-size: 0; transform: none; color: var(--iq-white); -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
+#swiper .swiper-button:hover { background: var(--iq-white); color: white !important; -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
 #swiper { display: flex; align-items: center; justify-content: center; }
 #swiper .swiper-button-prev:before { color: var(--iq-white);  content: "\f30a"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px }
 #swiper .swiper-button-next:before { color: var(--iq-white);  content: "\f30b"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px}
-#swiper .swiper-button-prev:hover::before { color: var(--iq-primary); }
-#swiper .swiper-button-next:hover::before { color: var(--iq-primary); }
+/* #swiper .swiper-button-prev:hover::before { color: var(--iq-primary); }
+#swiper .swiper-button-next:hover::before { color: var(--iq-primary); } */
 .swiper-button { width: 30px; height: 30px; border-radius: 5px !important; text-align: center; opacity: 1; font-size: 24px; z-index: 9; }
 .swiper-button-next:after{content: 'none'}
 .swiper-button-prev:after{content: 'none'}
+
+#swiper .right:before { color: var(--iq-white);  content: "\f30a"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px ;margin-top: "10px"}
+#swiper .left:before { color: var(--iq-white);  content: "\f30b"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px}
 @media (min-width: 320px) and (max-width: 1000px){
     .swiper-button.swiper-button-prev{
         display: none !important;
@@ -15,4 +18,30 @@
     .swiper-button.swiper-button-next{
         display: none !important;
     }
+    .swiper-button.right{
+        display: none !important;
+    }
+    .swiper-button.left{
+        display: none !important;
+    }
+    
+}
+
+
+
+@media screen and (min-width: 0px) and (max-width: 1150px) {
+.BTN-1{
+    font-size: 8px;
+}
+.BTNLOGO{
+    height: 8px;
+    width: 8px;
+
+}
+.Searchit{
+    width: 100%;
+}
+.TEXTINPUT{
+    width: 100% !important;
+}
 }
