--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -277,10 +277,11 @@ Avatar Size
 /*----------------------------------------------
 Card
 ------------------------------------------------*/
-.iq-card { background: var(--iq-light-card); -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; margin-bottom: 30px; border: none; }
+/* var(--iq-light-card) */
+.iq-card { background:"#1E2C37" ; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; margin-bottom: 30px; border: none; }
 .iq-card-transparent { background: transparent; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; margin-bottom: 30px; border: none; box-shadow: none; }
 .iq-card-body { padding: 15px; }
-.iq-card .iq-card-header, .iq-card-transparent .iq-card-header { padding: 20px; margin-bottom: 0; -ms-flex-align: center !important; align-items: center !important; border-bottom: 1px solid rgb(20 20 20);}
+.iq-card .iq-card-header, .iq-card-transparent .iq-card-header { padding: 20px; margin-bottom: 0; -ms-flex-align: center !important; align-items: center !important;}
 .iq-card-transparent .iq-card-header { padding: 0px; border-bottom: 0; }
 .iq-card-transparent .iq-card-header .iq-header-title { display: inline-block; align-self: center !important; background: var(--iq-body-bg); padding: 0 20px; z-index: 9; }
 .iq-card-transparent .iq-card-header .iq-header-title { padding-left: 0px; }
