--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -224,7 +224,7 @@ Waves Effect
 /*---------------------------------------------------------------------
  Sidebar
  -----------------------------------------------------------------------*/
-.iq-sidebar { position: fixed; z-index: 1000; top: 0; width: 300px; height: 100%; background: var(--iq-light-card); transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; -webkit-transition: all 0.3s ease-in-out; }
+.iq-sidebar { position: fixed; z-index: 1000; top: 0; width: 300px; height: 100%; background: var(--iq-sidebar-dark); transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; -webkit-transition: all 0.3s ease-in-out; }
 .iq-sidebar .iq-sidebar-logo { float: none; width: 100%; }
 
 /*---------------------------------------------------------------------
@@ -233,6 +233,20 @@ Waves Effect
 
 /* Form */
 #sidebar-scrollbar { height: 100vh; }
+#sidebar-scrollbar .iq-sidebar-menu .iq-menu li a svg { overflow: unset !important; }
+
+/* to show logo on sidebar collpsed */
+.sidebar-main .fullLogo { display: none !important; }
+.sidebar-main .collapsedLogo { display: block !important; }
+.iq-sidebar:hover .fullLogo { display: block !important; }
+.iq-sidebar:hover .collapsedLogo { display: none !important; }
+.fullLogo { display: block !important; }
+.collapsedLogo { display: none !important; }
+
+/* hide iq-menu-bt to show logo of full width on sidebar collpsed*/
+.sidebar-main .iq-menu-bt-sidebar {display: none !important; }
+.iq-sidebar:hover .iq-menu-bt-sidebar  { display: block !important; }
+
 .iq-sidebar #sidebar-scrollbar { margin-top: 15px; }
 .iq-sidebar-menu .iq-menu .iq-menu-title { display: block; color: var(--iq-body-text); font-size: 15px; position: relative; padding: 15px; font-weight: 500; line-height: 18px; }
 .iq-sidebar-menu .iq-menu .iq-menu-title i { display: none; }
@@ -248,9 +262,11 @@ Waves Effect
 .iq-sidebar-menu .iq-menu li a .badge { position: absolute; right: 15px; -webkit-transition: all 0.9s ease-out 0s; -moz-transition: all 0.9s ease-out 0s; -ms-transition: all 0.9s ease-out 0s; -o-transition: all 0.9s ease-out 0s; transition: all 0.9s ease-out 0s; }
 .iq-sidebar-menu .iq-menu li a:hover { color: var(--iq-primary); }
 .iq-sidebar-menu .iq-menu > li.active>a { color: var(--iq-primary); text-decoration: none; }
+.iq-sidebar-menu .iq-menu li> a > svg { margin-right: 5px; }
 .iq-search-bar .searchbox .search-link { position: absolute; left: 15px; top: 5px; font-size: 16px; color: var(--iq-body-text); }
 .iq-sidebar-menu .iq-menu li a[aria-expanded="true"], .iq-sidebar-menu .iq-menu li.active-menu > a { color: var(--iq-primary); text-decoration: none; border-radius: 0; transition: none; }
 .iq-sidebar-menu .iq-menu li a[aria-expanded="true"] .iq-arrow-right { transform: rotate(90deg); transition: all 0.3s ease-in-out; -webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; }
+.iq-sidebar-menu .iq-menu li a[aria-expanded="true"] .iq-arrow-right.la-angle-down{ transform: rotate(180deg) !important; transition: all 0.3s ease-in-out; -webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; }
 .iq-sidebar-menu .iq-menu li .iq-submenu li a:hover, .iq-sidebar-menu .iq-menu li.active .iq-submenu li>a { background: transparent; }
 .iq-sidebar-menu .iq-menu li.active .iq-submenu li.active>a { color: var(--iq-primary); border-radius: 0; }
 .iq-sidebar-menu .iq-menu li.active .iq-submenu li:last-child>a { border-radius: 0 0 5px 5px; }
@@ -272,11 +288,18 @@ body.sidebar-main .iq-sidebar .iq-menu li a[aria-expanded="false"].collapsed { b
 .iq-sidebar-menu .iq-menu .iq-submenu .iq-submenu-data { box-shadow: none; }
 .iq-sidebar-menu .iq-menu li.active ul.iq-submenu-data li.active>a { background: var(--iq-light-primary); color: var(--iq-primary); border-radius: 0; }
 .iq-sidebar-menu .iq-menu li ul.iq-submenu-data li { margin: 0; }
-
+.iq-sidebar-menu .iq-menu li.active .iq-submenu li.active>a { color: var(--iq-primary); border-radius: 0; }
+ .iq-sidebar-menu .iq-menu li.active-menu > a > svg > path{fill: var(--iq-primary) !important;}
+ .iq-sidebar-menu .iq-menu li a:hover > svg>path { fill: var(--iq-primary) !important; }
+ .iq-sidebar-menu .iq-menu > li.active>a> svg>path { fill: var(--iq-primary) !important; }
+ .iq-sidebar-menu .iq-menu li.active .iq-submenu li.active>a>svg>path { fill: var(--iq-primary) !important; }
 /*---------------------------------------------------------------------
 Top Menu
 -----------------------------------------------------------------------*/
-.iq-top-navbar { padding: 0 15px 0 30px; min-height: 73px; position: fixed; top: 0; left: auto; right: 0; width: calc(100% - 300px); display: inline-block; z-index: 99; background: var(--iq-light-card); margin: 0; transition: all 0.45s ease 0s; }
+.logoImg{
+  height: 60px;
+}
+.iq-top-navbar { padding: 0 15px 0 30px; min-height: 63px; position: fixed; top: 0; left: auto; right: 0; width: calc(100% - 300px); display: inline-block; z-index: 99; background: var(--iq-navbar-dark); margin: 0; transition: all 0.45s ease 0s; }
 body.sidebar-main .iq-top-navbar { width: calc(100% - 80px); }
 .iq-top-navbar.fixed-header { margin: 0; right: 0; width: calc(100% - 330px); border-radius: 0; transition: all 0.45s ease 0s; }
 .iq-top-navbar .iq-navbar-custom .navbar-breadcrumb { display: block; margin-left: 0px; padding: 20px 0; }
@@ -303,7 +326,28 @@ body.sidebar-main .iq-top-navbar { width: calc(100% - 80px); }
 .iq-breadcrumb { display: none; }
 .toggle-cart-info img { width: 50px; }
 .nav-item span.dots { height: 6px; width: 6px; font-size: 0; text-align: center; padding: 0; position: absolute; top: -4px; right: -2px; border: 0; animation: shadow-pulse-dots 1s infinite; border-radius: 50%; -webkit-border-radius: 50%; }
+.navbar-list .navItem{
+   height: 45px;
+  text-align: center;
+   line-height: 35px;
+  margin: 15px 10px;
+    padding: 5px 20px;
 
+}
+.navbar-list > a, .navbar-list > button{
+margin: auto;
+margin-right: 25px;
+/* font-family: 'Montserrat'; */
+font-size: 15px;
+font-weight: 600;
+ letter-spacing: 0.3px;
+}
+.navbar-list > button{
+  color: #13212D !important;
+}
+.navbar-list > a{ 
+color: #FFFFFF;
+}
 /*.nav-item span.dots.dots-danger { height: 10px; width: 10px; font-size: 0; text-align: center; padding: 0; position: absolute; top: -4px; right: -2px; border: 2px solid var(--iq-white); animation: shadow-pulse-dots-danger 1s infinite; border-radius: 50%; -webkit-border-radius: 50%; }*/
 .nav-item span.count-mail { height: 6px; width: 5px; font-size: 10px; text-align: center; line-height: 15px; padding: 0; position: absolute; top: -4px; right: -2px; border: 0; animation: shadow-pulse 1s infinite; border-radius: 50%; }
 .nav-item .badge.count-cart { height: 15px; width: 15px; font-size: 10px; text-align: center; line-height: 15px; padding: 0; position: absolute; top: -4px; right: -3px; }
@@ -346,7 +390,8 @@ div#lottie-beil svg path, div#lottie-mail svg path, div#lottie-fullscreen svg pa
 /*---------------------------------------------------------------------
 content Page
 -----------------------------------------------------------------------*/
-.content-page { overflow: hidden; margin-left: 300px; padding: 117px 15px 0; min-height: 100vh; -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s; transition: all 0.3s ease-out 0s; }
+.content-page {    background: linear-gradient(180deg, #1f4949 0%, rgba(17, 255, 189, 0) 100%);
+  mix-blend-mode: normal;  overflow: hidden; margin-left: 300px; padding: 117px 15px 0; min-height: 100vh; -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s; transition: all 0.3s ease-out 0s; }
 .iq-user-dropdown { width: 350px; }
 body.sidebar-main .content-page { margin-left: 80px; }
 .iq-dropdown { padding: 0px 5px; }
@@ -394,7 +439,7 @@ body.sidebar-main .content-page { margin-left: 80px; }
 .logo-text { color: var(--iq-body-text); text-transform: uppercase; font-size: 10px; letter-spacing: 5px }
 .iq-sidebar-logo a span.logo-text { font-size: 10px; letter-spacing: 5px; }
 .iq-sidebar-logo a:hover, .iq-sidebar-logo a:focus { text-decoration: none; }
-.iq-sidebar-logo img { height: 45px; }
+.iq-sidebar-logo img { height: 55px; }
 .iq-top-navbar .iq-navbar-custom .iq-menu-bt-sidebar .iq-menu-bt { display: block; margin: 0 0 0 20px; }
 .iq-menu-bt { }
 .wrapper-menu { font-size: 30px; text-align: center; line-height: 15px; color: var(--iq-primary); position: relative; display: flex; flex-direction: column; justify-content: space-between; cursor: pointer; transition: transform 330ms ease-out; background: transparent; padding: 12px 0px; margin-right: 15px; -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s; transition: all 0.3s ease-out 0s; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
@@ -887,4 +932,7 @@ Pricing Page
 .btn-border{
   border: 1px solid #404043 !important;
   border-radius: unset !important;
+}
+.rtl-box{
+  display: none !important;
 }
