--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -4,7 +4,7 @@
   --iq-title-text: #ffffff;
   --iq-body-text: #D1D0CF;
   --iq-body-bg : #141414;
-  --iq-primary: #e20e02;
+  --iq-primary: #11FFBD;
   --iq-secondary:#83878a;
   --iq-success: #14e788;
   --iq-warning: #f68a04;
@@ -24,7 +24,7 @@
   --iq-light-info: rgba(0,122,255,0.2);
   --iq-light-light:rgba(250,250,251,0.2);
   --iq-light-dark: rgba(0,0,0,0.2);
-  --iq-primary-hover: #bf000a;
+  --iq-primary-hover: #11FFBD;
    --iq-secondary-hover: #807e7e;
   --iq-success-hover: #42f9d9;
   --iq-danger-hover: #3c4354;
@@ -40,4 +40,8 @@
   --iq-primary-light: #f3fffe;
   --iq-bg1:#363636;
   --iq-disable:#313946;
+  --iq-navbar-dark: #1E2C37;
+  --iq-sidebar-dark: #13212D;
+  
+
 }
