--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -620,10 +620,8 @@ Waves Effect
 /*---------------------------------------------------------------------
  Sidebar
  -----------------------------------------------------------------------*/
-<<<<<<< HEAD
 .iq-sidebar { position: fixed; z-index: 1000; top: 0; width: 300px; height: 100%; background: var(--iq-sidebar-dark); transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; -o-transition: all 0.3s ease-in-out; -webkit-transition: all 0.3s ease-in-out; }
 .iq-sidebar .iq-sidebar-logo { float: none; width: 100%; }
-=======
 .iq-sidebar {
   position: fixed;
   z-index: 1000;
@@ -642,14 +640,11 @@ Waves Effect
   float: none;
   width: 100%;
 }
->>>>>>> 9fd1d09e0a95d55d9350d41f6eb8b07b92e9b0a4
-
 /*---------------------------------------------------------------------
                              Sidebar Menu
  -----------------------------------------------------------------------*/
 
 /* Form */
-<<<<<<< HEAD
 #sidebar-scrollbar { height: 100vh; }
 #sidebar-scrollbar .iq-sidebar-menu .iq-menu li a svg { overflow: unset !important; }
 
@@ -750,7 +745,6 @@ body.sidebar-main .iq-top-navbar { width: calc(100% - 80px); }
    line-height: 35px;
   margin: 15px 10px;
     padding: 5px 20px;
-=======
 #sidebar-scrollbar {
   height: 100vh;
 }
@@ -1112,7 +1106,6 @@ body.sidebar-main .iq-top-navbar {
   border-radius: 50%;
   -webkit-border-radius: 50%;
 }
->>>>>>> 9fd1d09e0a95d55d9350d41f6eb8b07b92e9b0a4
 
 }
 .navbar-list > a, .navbar-list > button{
@@ -1180,7 +1173,6 @@ color: #FFFFFF;
   }
 }
 @keyframes shadow-pulse-danger {
-<<<<<<< HEAD
   0% { box-shadow: 0 0 0 0px rgba(255, 155, 138, 0.2); }
   100% { box-shadow: 0 0 0 15px rgba(255, 155, 138, 0); }
 }
@@ -1203,14 +1195,6 @@ div#lottie-beil svg path, div#lottie-mail svg path, div#lottie-fullscreen svg pa
 .iq-navbar-logo a:hover, .iq-navbar-logo a:focus { text-decoration: none; }
 .iq-navbar-logo img { height: 45px; }
 .iq-top-navbar .iq-navbar-custom .iq-menu-bt { display: none; }
-=======
-  0% {
-    box-shadow: 0 0 0 0px rgba(255, 155, 138, 0.2);
-  }
-  100% {
-    box-shadow: 0 0 0 15px rgba(255, 155, 138, 0);
-  }
-}
 div#lottie-beil,
 div#lottie-mail,
 div#lottie-fullscreen {
@@ -1313,18 +1297,15 @@ div#lottie-fullscreen svg path {
 .iq-top-navbar .iq-navbar-custom .iq-menu-bt {
   display: none;
 }
->>>>>>> 9fd1d09e0a95d55d9350d41f6eb8b07b92e9b0a4
 
 /*---------------------------------------------------------------------
 content Page
 -----------------------------------------------------------------------*/
-<<<<<<< HEAD
 .content-page {    background: linear-gradient(180deg, #1f4949 0%, rgba(17, 255, 189, 0) 100%);
   mix-blend-mode: normal;  overflow: hidden; margin-left: 300px; padding: 117px 15px 0; min-height: 100vh; -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s; transition: all 0.3s ease-out 0s; }
 .iq-user-dropdown { width: 350px; }
 body.sidebar-main .content-page { margin-left: 80px; }
 .iq-dropdown { padding: 0px 5px; }
-=======
 .content-page {
   overflow: hidden;
   margin-left: 300px;
@@ -1345,7 +1326,6 @@ body.sidebar-main .content-page {
 .iq-dropdown {
   padding: 0px 5px;
 }
->>>>>>> 9fd1d09e0a95d55d9350d41f6eb8b07b92e9b0a4
 
 /*------dashboard----*/
 .iq-rated-box .iq-card {
@@ -1568,7 +1548,6 @@ body.sidebar-main .content-page {
 }
 
 /*---------- Sidebar Logo --------------*/
-<<<<<<< HEAD
 .iq-sidebar-logo { padding-top: 15px; padding-left: 20px; width: 260px; float: left; position: relative; background: var(--iq-white); -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s; transition: all 0.3s ease-out 0s; background: transparent; }
 .iq-sidebar-logo a { display: flex; align-items: flex-start }
 .iq-sidebar-logo a span { margin-left: 10px; font-size: 19px; line-height: 42px; padding-left: 1px; letter-spacing: 1.5px; font-weight: 600; flex: 1; -webkit-transition: all 0.3s ease-out 0s; -moz-transition: all 0.3s ease-out 0s; -ms-transition: all 0.3s ease-out 0s; -o-transition: all 0.3s ease-out 0s; transition: all 0.3s ease-out 0s }
@@ -1585,7 +1564,6 @@ body.sidebar-main .content-page {
 .open .line-menu.start { transform: rotate(-90deg) translateX(3px); }
 .line-menu.end { align-self: flex-end; transition: transform 330ms cubic-bezier(0.54, -0.81, 0.37, 0.37); transform-origin: left; }
 .open .line-menu.end { transform: rotate(-90deg) translateX(-3px); }
-=======
 .iq-sidebar-logo {
   padding-top: 15px;
   padding-left: 20px;
@@ -1688,7 +1666,6 @@ body.sidebar-main .content-page {
 .open .line-menu.end {
   transform: rotate(-90deg) translateX(-3px);
 }
->>>>>>> 9fd1d09e0a95d55d9350d41f6eb8b07b92e9b0a4
 
 /*----------------------*/
 .iq-top-navbar .iq-sub-dropdown {
@@ -3792,11 +3769,9 @@ Pricing Page
   border: 1px solid #404043 !important;
   border-radius: unset !important;
 }
-<<<<<<< HEAD
 .rtl-box{
   display: none !important;
 }
-=======
 
 h6 {
   width: 60%;
@@ -3908,4 +3883,61 @@ h6 span {
 .modal.show .modal-dialog {
   justify-content: center !important;
 }
->>>>>>> 9fd1d09e0a95d55d9350d41f6eb8b07b92e9b0a4
+
+
+
+@media (min-width: 576px) { 
+  .search-bar-class {
+      font-weight: 400;
+      font-size: 10px;
+      background: rgb(19, 33, 45);
+      border-radius: 30px;
+      width: 110%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      display: flex;
+      justify-content: flex-start;
+  }
+}
+
+@media (min-width: 768px) { 
+  .search-bar-class {
+      font-weight: 400;
+      font-size: 10px;
+      background: rgb(19, 33, 45);
+      border-radius: 30px;
+      width: 110%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      display: flex;
+      justify-content: flex-start;
+  }
+}
+
+@media (min-width: 992px) { 
+  .search-bar-class {
+      font-weight: 600;
+      font-size: 14px;
+      background: rgb(19, 33, 45);
+      border-radius: 30px;
+      width: 60%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      display: flex;
+      justify-content: flex-start;
+  }
+}
+
+@media (min-width: 1200px) {
+  .search-bar-class {
+      font-weight: 600;
+      font-size: 14px;
+      background: rgb(19, 33, 45);
+      border-radius: 30px;
+      width: 60%;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      display: flex;
+      justify-content: flex-start;
+  }
+}
