--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -348,4 +348,23 @@ NOTE: This file contains the styling for responsive Template.
 	.iq-header .iq-search .dropdown-menu.show .search-box{
  		display: inline-block;
 	}
+
 }
+@media screen and (min-width: 0px) and (max-width: 1000px){
+
+	 .headertop{
+		margin-top: 17% !important;
+		height: 5% !important;
+	}
+	.LOGOicon{
+		width: 7vw ;
+		height: 14vw;
+		display: none;
+	}
+	}
+
+	/* @media screen and (min-width: 520px) and (max-width: 820px){
+		.LOGOicon{
+			height: 5vh;
+		}
+	} */
