--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 /*
 Template: Streamit  - Responsive Bootstrap 4 Admin Dashboard Template
 Author: iqonicthemes.in
@@ -428,7 +429,7 @@ Tasks Card
 Sign In
 -----------------------------------------------------------------------*/
 #sign-in-page-box {
-  background: #fff;
+   background: #fff;
   border-radius: 10px;
   position: relative;
   width: 100%;
@@ -443,7 +444,7 @@ Sign In
 }
 .sign-in-page {
   height: fit-content;
-  position: relative;
+  /* position: relative; */
   /* / background: url("../images/login/login.jpg") no-repeat scroll 0 0; / */
   background-size: cover;
 }
@@ -533,10 +534,13 @@ Sign In
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: block;
   /* margin: 25px auto; */
-  max-width: 100vw;
-  width: 40vw;
+   max-width: auto; 
+  
+  width: 28vw;
   max-height: fit-content !important;
+  border-radius: 10px;
 }
+
 
 .sign-user_logo {
   position: absolute;
@@ -577,6 +581,19 @@ Sign In
 }
 .f-link:hover {
   color: var(--iq-primary);
+}
+.reCaptcha{
+ /* margin: 20px auto; 
+ max-width: auto;
+ width:28vw; */
+ margin-top:1.5vw
+}
+.reCaptcha-signup{
+  margin-top:3vw
+}
+.checkbox-input{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
 }
 
 /*---------------------------------------------------------------------
@@ -1023,6 +1040,7 @@ body.sidebar-main .iq-top-navbar {
   float: left;
   list-style-type: none;
   position: relative;
+  top:-20px
 }
 .navbar-list li > .dropdown .dropdown-menu {
   -webkit-animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1)
@@ -1113,7 +1131,7 @@ body.sidebar-main .iq-top-navbar {
   text-align: center;
   line-height: 35px;
   margin: 2.5px;
-  padding: 5px 20px;
+  padding: 0px 8px;
 }
 #sidebar-scrollbar {
   height: 100vh;
@@ -4030,7 +4048,7 @@ slick Arrow
   display: block;
   padding: 50px 15px;
   margin: 10px 20px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   -webkit-border-radius: 5px;
   text-decoration: none;
   border: 1px solid var(--iq-light-primary);
@@ -4756,6 +4774,11 @@ h6 span {
   width: 20px;
   align-self: center;
 }
+.socialImage-f {
+  height: 20px;
+  width: 10px;
+  align-self: center;
+}
 
 .privacyPolicy {
   width: fit-content;
@@ -4777,9 +4800,11 @@ h6 span {
   gap: 5px;
   background: #13212d;
   border-color: #13212d;
+  border-radius: 27px;
+  
 }
 .registerToggleOuter {
-  width: 235px;
+  /* width: 235px; */
   height: 38px;
   background: #13212d;
   border-color: #13212d;
@@ -4796,6 +4821,19 @@ h6 span {
   margin: 2.5px;
 }
 .btn:hover {
+  background: #344452;
+  border-color: #344452;
+  border-top-left-radius: 27px !important;
+  border-bottom-left-radius: 27px !important;
+  border-top-right-radius: 27px !important;
+  border-bottom-right-radius: 27px !important;
+  text-align: center;
+  margin: 2.5px;
+  /* margin-left: 15px !important; */
+  transition: none !important;
+  translate: none !important;
+}
+.selected {
   background: #344452;
   border-color: #344452;
   border-top-left-radius: 27px !important;
@@ -4946,4 +4984,40 @@ h6 span {
     display: flex;
     justify-content: flex-start;
   }
+}
+
+.navbar-list-hide{
+
+ position: absolute;
+ top:0;
+ right:2px;
+ 
+}
+.navItem-hide{
+  font-size: 70px;
+}
+
+
+@media only screen and (max-width: 1026px) {
+  .web {
+      display: none;
+  }
+  .navbar-toggler{
+    display: none;
+  }
+  .header-logo{
+    margin-left: -20px;
+  }
+  
+
+}
+@media only screen and (min-width: 1026px) {
+  .mobile {
+      display: none;
+  }
+  .navbar-list-hide{
+    display: none;
+  }
+
+  
 }
