--- a/src/assets/css/swiper.css
+++ b/src/assets/css/swiper.css
@@ -70,7 +70,7 @@
 } */
 
 
-#swiper .swiper-button { position: static; background: var(--iq-primary) 0% 0% no-repeat padding-box; margin: 0 0 0 20px; line-height: 3px; box-shadow: 0px 9px 19px #01041B0D; font-size: 0; transform: none; color: var(--iq-white); -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
+#swiper .swiper-button { position: static; background: var(--iq-primary) 0% 0% no-repeat padding-box; margin: 0 0 0 10px; line-height: 3px; box-shadow: 0px 9px 19px #01041B0D; font-size: 0; transform: none; color: var(--iq-white); -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
 #swiper .swiper-button:hover { background: var(--iq-white); color: white !important; -webkit-transition: all 0.4s ease-in-out 0s; -moz-transition: all 0.4s ease-in-out 0s; transition: all 0.4s ease-in-out 0s; }
 #swiper { display: flex; align-items: center; justify-content: center; }
 #swiper .swiper-button-prev:before { color: var(--iq-white);  content: "\f30a"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px }
@@ -83,7 +83,7 @@
 
 #swiper .right:before { color: var(--iq-white);  content: "\f30a"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px ;margin-top: "10px"}
 #swiper .left:before { color: var(--iq-white);  content: "\f30b"; font-family: 'Line Awesome Free'; font-weight: 900; font-size: 20px}
-@media (min-width: 320px) and (max-width: 1000px){
+/* @media (min-width: 320px) and (max-width: 1000px){
     .swiper-button.swiper-button-prev{
         display: none !important;
     }
@@ -97,17 +97,18 @@
         display: none !important;
     }
     
-}
+} */
 
 
 
 @media screen and (min-width: 0px) and (max-width: 1150px) {
 .BTN-1{
-    font-size: 5px;
+    font-size: 7px;
 }
 .BTNLOGO{
-    height: 8px;
-    width: 8px;
+    /* height: 8px;
+    width: 8px; */
+   display: none;
 
 }
 .Searchit{
@@ -118,5 +119,8 @@
 }
 .bbt{
     margin-top: 3px;
+}
+#swiper{
+    justify-content: flex-end;
 }
 }
