--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -172,6 +172,17 @@
     width: 30px;
   }
 }
-.Searchtext1 {
-  background-color: "red" !important;
+
+
+@media screen and (min-width: 0px) and (max-width: 1000px){
+  .Searchtext1 {
+    display: none !important;
+  }
+  .DashborCards{
+    flex-wrap: nowrap !important;
+    overflow-x: scroll !important;
+    
+  }
+
+::-webkit-scrollbar {display:none !important;}
 }
