--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1146,7 +1146,7 @@ NOTE: This file contains the styling for responsive Template.
     padding-right: 10px;
   }
   .iq-card .iq-card-header {
-    display: block !important;
+    display: flex !important;
     text-align: center;
   }
   .iq-card .iq-card-header > .d-flex {
@@ -1198,8 +1198,12 @@ NOTE: This file contains the styling for responsive Template.
 		display: none;
 	}
   .FilterBtn{
-    width: 35% !important;
+    /* width: 35% !important; */
+     display: none !important;
    
+  }
+  .FILTERBTN{
+    margin-top: 15% !important;
   }
   .Casinocards{
     margin: 10% !important;
@@ -1237,8 +1241,11 @@ NOTE: This file contains the styling for responsive Template.
  
   
    }
-	/* @media screen and (min-width: 520px) and (max-width: 820px){
-		.LOGOicon{
-			height: 5vh;
-		}
-	} */
+	@media screen and (min-width: 0px) and (max-width: 1000px){
+		.Cardresponsive{
+      display: flex !important;
+    }
+    .Responsivrbtn{
+      padding: 23px 30px !important; 
+    }
+	}
