--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1944,7 +1944,7 @@ div#lottie-fullscreen svg path {
   margin-bottom: "3%";
   display: "flex";
   justify-content: "center" */
-    /* margin: 2vw 5vw; */
+    margin: 0vw 5vw;
 }
 
 .iq-navbar-logo {
