--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -443,7 +443,7 @@ Sign In
 }
 .sign-in-page {
   height: fit-content;
-  position: relative;
+  /* position: relative; */
   /* / background: url("../images/login/login.jpg") no-repeat scroll 0 0; / */
   background-size: cover;
 }
@@ -533,10 +533,25 @@ Sign In
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: block;
   /* margin: 25px auto; */
-  max-width: 100vw;
-  width: 40vw;
+  max-width: auto;
+  width: 28vw;
   max-height: fit-content !important;
+  border-radius: 30px;
 }
+@media (max-width: 1076px) {
+  
+  .sign-user_card{
+    width:100% !important;
+    max-width: auto;
+  }
+  }
+  @media (max-width: 586px) {
+  
+    .sign-user_card{
+      width:100% !important;
+      max-width: auto;
+    }
+    }
 
 .sign-user_logo {
   position: absolute;
@@ -577,6 +592,21 @@ Sign In
 }
 .f-link:hover {
   color: var(--iq-primary);
+}
+.reCaptcha {
+  /* margin: 20px auto; 
+ max-width: auto;
+ width:28vw; */
+  margin-top: 1.5vw
+}
+
+.reCaptcha-signup {
+  margin-top: 3vw
+}
+
+.checkbox-input {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
 }
 
 /*---------------------------------------------------------------------
@@ -4767,6 +4797,12 @@ h6 span {
   align-self: center;
 }
 
+.socialImage-f {
+  height: 20px;
+  width: 10px;
+  align-self: center;
+}
+
 .privacyPolicy {
   width: fit-content;
   height: 30px;
@@ -4787,9 +4823,10 @@ h6 span {
   gap: 5px;
   background: #13212d;
   border-color: #13212d;
+  border-radius: 27px;
 }
 .registerToggleOuter {
-  width: 235px;
+  /* width: 235px; */
   height: 38px;
   background: #13212d;
   border-color: #13212d;
@@ -4815,6 +4852,20 @@ h6 span {
   text-align: center;
   margin: 2.5px;
   /* margin-left: 15px !important; */
+  transition: none !important;
+  translate: none !important;
+}
+
+.selected {
+  background: #344452;
+  border-color: #344452;
+  border-top-left-radius: 27px !important;
+  border-bottom-left-radius: 27px !important;
+  border-top-right-radius: 27px !important;
+  border-bottom-right-radius: 27px !important;
+  text-align: center;
+  margin: 2.5px;
+   /* margin-left: 15px !important;  */
   transition: none !important;
   translate: none !important;
 }
@@ -5024,3 +5075,36 @@ body.sidebar-main .iq-sidebar {
 
 }
 
+.img-fluid1 {
+  max-width: 100%;
+  height: auto;
+  width: auto !important;
+}
+
+.rc-anchor-alert {
+  display: none !important;
+color: #f8f9fa !important;
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1650px){
+
+  
+  .TEXTINPUT{
+    width: 260% !important;
+  }
+  
+  }
+  
+  @media screen and (min-width: 990px) and (max-width: 1180px){
+  
+    
+    .Fullcontainer{
+      max-width: 100% !important;
+    }
+    
+    }
+    @media screen and (min-width: 1200px) and (max-width: 1550px){
+      .Searchit{
+      width: 70% !important
+      
+    }}
