--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1558,7 +1558,7 @@ body.sidebar-main .iq-sidebar .iq-menu li a[aria-expanded="false"].collapsed {
 }
 
 .iq-sidebar-menu .iq-menu li.active>a::before {
-  opacity: 1;
+  opacity: 0;
   height: 75%;
 } */
 
@@ -5829,7 +5829,7 @@ h6 span {
   }
 
   .navbar-list-hide {
-    display: none;
+    /* display: none; */
   }
 
 
@@ -5887,3 +5887,14 @@ color: #f8f9fa !important;
       .Searchit{
       width: 70% !important
     }}
+    @media (max-width: 480px) {
+    body.sidebar-main .iq-sidebar {
+        margin-top: 86px;
+        width: 100%!important;
+        left: 0;
+        z-index: 999;
+    }}
+    @media (max-width: 480px) {
+.meunview {
+    display: none;
+}}
