--- a/src/assets/css/Customheader.css
+++ b/src/assets/css/Customheader.css
@@ -5,6 +5,10 @@
 .headertop{
     margin-top: "17%"!important;
     height: "5%"!important;
+
+}
+.Freespace{
+    /* display: none;; */
 }
 .LOGOO{
     width: 61vw !important;
@@ -12,14 +16,17 @@
     display: none !important;
 }
 .Headertitle{
-    width: 45% !important;
+    /* width: 45% !important; */
        margin-top: 4% !important;
 }
 .Headercls{
     
-        width: 25% !important;
+        /* width: 25% !important; */
         margin-top: 4% !important;
     
+}
+.Cardcontain{
+    justify-content: "center"!important;
 }
 }
 
@@ -32,10 +39,10 @@
     }}
     @media screen and (min-width: 1000px) and (max-width: 1100px){
         .Headertitle{
-            width: 20% !important;
+            /* width: 20% !important; */
         }}
         .Headercls{
-            width: 12%!important;
+            /* width: 12%!important; */
         }
         @media screen and (min-width: 0px) and (max-width: 290px){
             .Headertitle{
@@ -47,14 +54,14 @@
         @media screen and (min-width: 350px) and (max-width: 530px){
 
             .Headercls{
-                width: 25% !important;
+                /* width: 25% !important; */
             }
             
         }
         @media screen and (min-width: 710px) and (max-width: 850px){
 
             .Headercls{
-                width: 20% !important;
+                /* width: 20% !important; */
                 margin-top: 2% !important;
             }
             .Headertitle{
@@ -76,3 +83,9 @@
                     width: 31% !important;
                 }
             } */
+            @media screen and (min-width: 1000px) and (max-width: 1280px){
+
+                .headertop{
+                    margin-top: 6.5% !important;
+                }
+            }
