--- a/src/assets/css/Customheader.css
+++ b/src/assets/css/Customheader.css
@@ -75,7 +75,8 @@
                 width: 20% !important;
             }} */
             .Headercls{
-                width: 9%!important;
+                /* width: 9%!important; */
+                
             }}
 
             /* @media screen and (min-width: 350px) and (max-width: 550px){
