--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1291,6 +1291,10 @@ box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
     }
     .Responsivrbtn{
       padding: 23px 30px !important; 
+
+    }
+    .Flexcenter{
+      justify-content: center;
     }
 	}
 
