--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1607,7 +1607,7 @@ Top Menu
   width: calc(100% - 300px);
   display: inline-block;
   z-index: 99;
-  background: var(--iq-light-card);
+  background: #1E2C37;
   margin: 0;
   transition: all 0.45s ease 0s;
 }
